# code-analyzer

./: .gitignore  Makefile  README.md  analyze.py  pyproject.toml  requirements.txt  requirements_phase3.txt  requirements_phase3_minimal.txt  requirements_rag.txt  setup.py
config/: settings.yaml
config/ai_validation/: privacy_config.json  validation_config.json
config/entry_detection/: flask_patterns.json
config/rag_config/: system_settings.json  vulnerability_mappings.json
docs/phase3/: README.md
samples/test-projects/: enhanced-vulnerable-flask.py  vulnerable-flask-app.py
scripts/deployment/: phase3_setup.py
scripts/model_management/: download_models.py
src/: __init__.py  main.py
src/cli_navigator/: navigator.py
src/enhanced_models/: integrated_pipeline.py  validated_entry_point.py  validated_fix_suggestion.py
src/entry_detector/: __init__.py  detector.py  models.py  risk_assessor.py
src/framework_detector/: detector.py
src/integrations/: owasp_client.py  stackoverflow_client.py
src/rag_system/: __init__.py  data_processor.py  vector_store.py
src/report_generator/: __init__.py  enhanced_html_generator.py  html_generator.py  models.py  report_pipeline.py
src/utils/: config.py  logger.py
test_vulnerable_codebase/: README.md
test_vulnerable_codebase/backend/: app.py
test_vulnerable_codebase/config/: database.php
test_vulnerable_codebase/frontend/: main.js
test_vulnerable_codebase/utils/: security.java
tests/: README.md
tests/demos/: demo_complete_system.py  demo_final_phase4.py
tests/integration/: test_day2_production.py  (+3 more)
(+38 files in other folders)
